--- a/homepage.css
+++ b/homepage.css
@@ -4,6 +4,17 @@ html {
 	font-family: Helvetica,Arial,sans-serif;
 }
 
+div {
+	/* lines for showing the grid */
+
+/*  	background-size: 100% 30px;
+  	background-image: linear-gradient(to bottom,
+                                    black 0%,
+                                    transparent 3%,
+                                    transparent 100%);
+*/
+}
+
 .light_link {
 
 	/* for use on dark backgrounds */
@@ -17,30 +28,43 @@ html {
 }
 
 .section_heading {
-	font-size: 2.5em;
+
+	font-family: Roboto-Light, Helvetica, Arial, sans-serif;
+	font-size: 40px;
 	text-align: center;
-	padding-top: 60px;
-	padding-bottom: 20px;
-	margin: 0px;
+	line-height: 30px;   
+	margin: 0px 20% 0px 20%;
 }
 
 .section_paragraph {
-	font-size: 1.2em;
+	
+	font-family: RobotoSlab-Regular, Helvetica, Arial, sans-serif;
+	font-size: 20px;
 	text-align: left;
-	margin-left: 20%;
-	margin-right: 20%;
+
+
+	/* the negative bottom margin and correspoding top padding are the trick to getting the text on the baseline */
+	margin: 0 auto -8px auto;
+  	padding-top: 38px;
+
+	line-height: 30px;
+	max-width: 700px;
+
 }
+
+
 
 
 /* styling the page header - the first of the fat blocks */
 #header_block {
 	width: 100%;
-	height: 540px;
 
 	background-color: #3370A7;
 
 	text-align: center;
 	color: #ffffff;
+
+	padding: 60px 0px 90px 0px;
 }
 
 #header_profile_image {
@@ -48,19 +72,27 @@ html {
 	height: 300px;
 
 	display: block;
-	padding-top: 50px;
 	margin: 0 auto;
 }
 
 #header_name {
-	font-size: 2.5em;
-	margin: 5px;
-	padding-top: 20px;
+	font-family: 'Lobster', Helvetica;
+	font-size: 40px;
+	
+	margin: 0 auto -8px auto;
+  	padding-top: 20px;
+	
+	text-shadow: 2px 2px 1px rgba(0, 0, 0, .2);
 }
 
 #header_job_title {
-	font-size: 1.2em;
-	margin: 0px;
+	font-family: Roboto-Light;
+	font-size: 20px;
+	
+	margin: 0 auto -8px auto;
+  	padding-top: 5px;
+
+	line-height: 30px;
 }
 
 #header_text {
@@ -71,36 +103,36 @@ html {
 
 /* styling the intro block */
 #intro_block {
-	width: 100%;
-	height: 450px;
-
 	background-color: #e0e0e0;
 
 	color: #404040;
+
+	padding: 60px 0px 90px 0px;
+
 }
 
 
 
 /* styling the current work block */
 #current_work_block {
-	width: 100%;
-	height: 450px;
-
 	background-color: #ffffff;
 
 	color: #404040;
+
+	padding-top: 60px;
+	padding-bottom: 90px;
 }
 
 
 
 /* styling the current wrap-up block */
 #wrap_up_block {
-	width: 100%;
-	height: 450px;
-
 	background-color: #323232;
 
 	color: #ffffff;
+
+	padding-top: 60px;
+	padding-bottom: 90px;
 }
 
 
