--- a/homepage.css
+++ b/homepage.css
@@ -1,4 +1,3 @@
-
 /* general, page wide styling */
 html {
 	font-family: Helvetica,Arial,sans-serif;
@@ -10,7 +9,7 @@ body {
 div {
 	/* lines for showing the grid */
 
-  /*	background-size: 100% 30px;
+/*  	background-size: 100% 30px;
   	background-image: linear-gradient(to bottom,
                                     black 0%,
                                     transparent 5%,
@@ -21,46 +20,11 @@ div {
 
 }
 
-.light_link {
-
-	/* for use on dark backgrounds */
-	color: #ffffff;
-}
-
-.dark_link {
-
-	/* for use on light backgrounds */
-	color: #404040;
-}
-
-.section_heading {
-
-	font-family: 'Roboto', Helvetica, Arial, sans-serif;
-	font-weight: 300;
-	font-size: 40px;
-	text-align: center;
-	line-height: 30px;   
-	margin: 0px 20% 0px 20%;
-}
-
-.section_paragraph {
-	
-	font-family: 'Roboto Slab', Helvetica, Arial, sans-serif;
-	font-weight: 400;
-	font-size: 20px;
-	text-align: left;
-
-
-	/* the negative bottom margin and correspoding top padding are the trick to getting the text on the baseline */
-	margin: 0 auto -8px auto;
-  	padding-top: 38px;
-
-	line-height: 30px;
-	max-width: 700px;
-
-}
-
-
+/*@media all and (max-width: 420px) {
+  .section_paragraph {
+    font-size: 40px;
+  }
+}*/
 
 
 /* styling the page header - the first of the fat blocks */
@@ -72,7 +36,7 @@ div {
 	text-align: center;
 	color: #ffffff;
 
-	padding: 60px 0px 90px 0px;
+	padding: 60px 0px 105px 0px;
 }
 
 #header_profile_image {
@@ -111,38 +75,64 @@ div {
 
 
 /* styling the intro block */
-#intro_block {
+.dark_block {
 	background-color: #E9EAEE;
 
 	color: #404040;
 
-	padding: 60px 0px 90px 0px;
+	padding: 60px 0px 105px 0px;
 
 }
 
-
-
 /* styling the current work block */
-#current_work_block {
+.light_block {
 	background-color: #ffffff;
 
 	color: #404040;
 
-	padding-top: 60px;
-	padding-bottom: 90px;
+	padding: 60px 0px 105px 0px;
 }
 
+.light_link {
 
+	/* for use on dark backgrounds */
+	color: #ffffff;
+}
 
-/* styling the current wrap-up block */
-#wrap_up_block {
-	background-color: #E9EAEE;
+.dark_link {
 
+	/* for use on light backgrounds */
 	color: #404040;
-
-	padding-top: 60px;
-	padding-bottom: 90px;
 }
+
+.section_heading {
+
+	font-family: 'Roboto', Helvetica, Arial, sans-serif;
+	font-weight: 300;
+	font-size: 40px;
+	text-align: center;
+	line-height: 60px;   
+	margin: 0px 20% 0px 20%;
+}
+
+.section_paragraph {
+	
+	font-family: 'Roboto Slab', Helvetica, Arial, sans-serif;
+	font-weight: 400;
+	font-size: 20px;
+	text-align: left;
+
+
+	/* the negative bottom margin and correspoding top padding are the trick to getting the text on the baseline */
+	margin: 0 auto -8px auto;
+  	padding-top: 38px;
+
+	line-height: 30px;
+	max-width: 700px;
+	min-width: 300px;
+
+}
+
 
 
 
