Fixing padding-top for unordered list class

--- a/homepage.css
+++ b/homepage.css
@@ -132,6 +132,7 @@ div {
 
 .unordered_list {
 	padding-left: 0px;			/* because I want the bullets to be outside in the margin */	
+	padding-top: 8px;
 	list-style-type: circle;
 }
 
