temporary colour change to test redirect

--- a/homepage.css
+++ b/homepage.css
@@ -28,7 +28,8 @@ div {
 
 /* styling the page header - the first of the fat blocks */
 #header_block {
-	background-color: #3370A7;
+	/*background-color: #3370A7;*/
+	background-color: #ffffff;
 
 	text-align: center;
 	color: #ffffff;
