Reverting to my header background colour

--- a/homepage.css
+++ b/homepage.css
@@ -28,8 +28,7 @@ div {
 
 /* styling the page header - the first of the fat blocks */
 #header_block {
-	/*background-color: #3370A7;*/
-	background-color: #ffffff;
+	background-color: #3370A7;
 
 	text-align: center;
 	color: #ffffff;
