--- a/dear-pete/css/style.css
+++ b/dear-pete/css/style.css
@@ -79,3 +79,30 @@ p{
 	padding-top: 5px;
 	font-size: 14px;
 }
+
+@media (max-width: 700px) {
+	/*
+		This breakpoint is chosen because my max paragraph width is 700px. The additional 80px gives me a comfortable margin
+		either side of the paragraph text. Once we start getting narrower that that, I have to start specifying the margin
+		manually and cranking up the font size. 
+	*/
+  /*.section_paragraph, .unordered_list {
+    margin: 0 40px 0 40px;
+    min-width: 200px;
+  }*/
+  #clockdiv{
+	width: 320px;
+	font-family: sans-serif;
+	color: #ff0000;
+	display: inline-block;
+	font-weight: 100;
+	text-align: center;
+	font-size: 20px;
+	}
+
+
+	@viewport{
+	  width: device-width;
+	  zoom: 1;
+	}
+}
