--- a/dear-pete/css/style.css
+++ b/dear-pete/css/style.css
@@ -83,7 +83,7 @@ p{
 @media (max-width: 414px) {
 	
   #clockdiv{
-	width: 'device-width';
+	/*width: 'device-width';*/
 	font-family: sans-serif;
 	color: #ff0000;
 	display: inline-block;
