--- a/less/variables.less
+++ b/less/variables.less
@@ -14,4 +14,7 @@
 @project-logo-width: 81px;
 
 @block-padding-top: 2em;
-@block-padding-bottom: 3em;
+@block-padding-bottom: 1em;
+@block-padding-first: 2em;
+@block-padding-last: 4em;
+
