--- a/less/app.less
+++ b/less/app.less
@@ -28,30 +28,6 @@ p {
   margin-top: 0;
 }
 
-// --- WIP MESSAGE BANNER
-
-.wip-message__banner{
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 999;
-  width: 100%;
-  height: 36px;
-  background-color: @colour-white;
-  box-shadow: 1px 2px 1px rgba(0, 0, 0, 0.2);
-}
-
-.wip-message__text{
-  margin-top: 0.5em;
-  margin-left: @margin-left;
-  // margin-right: @margin-right;
-  font-size: 0.65em;
-}
-
-.wip-message__link {
-  text-decoration: none;
-}
-
 
 // --- HEADSHOT 
 
@@ -65,6 +41,16 @@ p {
   background-position: left bottom;
   padding-top: calc(150px + (20 * @block-padding-top)); //image height + standard section padding
   margin-left: @margin-left;
+}
+
+// --- ABOUT IMAGE
+
+.about__image {
+  background-image: url(../images/vedran_speaking_at_meetup.jpg);
+  background-repeat: no-repeat;
+  background-position: right top;
+  padding-top: calc(650px + (20 * @block-padding-top)); //image height + standard section padding
+  margin-left: none;
 }
 
 
@@ -117,6 +103,14 @@ p {
   left: @margin-left;
   top: 1.5em;
   color: @colour-white;
+}
+
+.block--first-in-section {
+  padding-top: @block-padding-first;
+}
+
+.block--last-in-section {
+  padding-bottom: @block-padding-last;
 }
 
 .career-item{
@@ -194,5 +188,9 @@ p {
 .link--list {
   margin-top: 0;
   margin-bottom: 2.5em;
+}
+
+.link--inline{
+  display: inline;
 }
 
