--- a/less/variables.less
+++ b/less/variables.less
@@ -13,12 +13,17 @@
 
 @project-logo-width: 81px;
 
-@block-padding-top: 2em;
-@block-padding-bottom: 1em;
-@block-padding-first: 2em;
-@block-padding-last: 4em;
+@section-padding-top: 2em;
+@section-padding-bottom: 1em;
+@section-padding-first: 2em;
+@section-padding-last: 4em;
+
+@sub-section-padding-top: 1em;
+@sub-section-padding-bottom: 0em;
+@sub-section-padding-first: 2em;
+@sub-section-padding-last: 4em;
 
 @screen-large: 900px;
 
-@max-text-width: 30em;
+@max-text-width: 35em;
 
