--- a/less/app.less
+++ b/less/app.less
@@ -12,7 +12,7 @@ body {
   width: 100%;
   overflow-x: hidden;
   position: relative;
-  font-size: 18px;
+  font-size: @font-base-size;
   line-height: 1.5em;
   font-weight: @font-weight-normal;
   margin: 0px;
@@ -148,11 +148,39 @@ p {
 }
 
 
-// --- ABOUT PAGE
+// --- ABOUT
 
 
 .image--full-width {
   max-width: 100%;
+}
+
+// --- MY WORK 
+
+// I have a max width of 35em to work with
+
+.my-work-item {
+  padding-top: 2em;
+  padding-bottom: 4em;
+}
+
+.my-work-item__image {
+  display: inline-block;
+  padding-top: 1em;
+  vertical-align: top;
+  max-width: 15em;
+}
+
+.my-work-item__description {
+  display: inline-block;
+  max-width: 18em;
+  padding-top: 2em;
+  vertical-align: top;
+
+  @media screen and (min-width: @screen-large) {
+    padding-left: 2em;
+    padding-top: 1em;
+  }
 }
 
 
