--- a/less/variables.less
+++ b/less/variables.less
@@ -16,15 +16,18 @@
 
 @section-padding-top: 2em;
 @section-padding-bottom: 1em;
-@section-padding-first: 2em;
+@section-padding-first: 3em;
 @section-padding-last: 4em;
 
 @sub-section-padding-top: 1em;
 @sub-section-padding-bottom: 0em;
-@sub-section-padding-first: 2em;
+@sub-section-padding-first: 3em;
 @sub-section-padding-last: 4em;
 
 @screen-large: 900px;
 
 @max-text-width: 35em;
+
+// I'm basing a lot of dimensions on the width of the profile image
+@block-width: 400px;
 
