--- a/css/app.css
+++ b/css/app.css
@@ -25,6 +25,42 @@ p {
   margin-top: 0;
   max-width: 35em;
 }
+.nav {
+  background-color: #E0E0E0;
+  padding: 2em 2em 6em 0em;
+}
+.nav__list {
+  list-style: none;
+  margin-left: 5%;
+  padding: 0;
+}
+@media screen and (min-width: 900px) {
+  .nav__list {
+    max-width: 900px;
+    margin: auto;
+  }
+}
+.nav__item a {
+  text-decoration: none;
+  color: #030303;
+  padding: 1em 1em;
+}
+.nav__item:first-child a {
+  padding-left: 0;
+  font-weight: 700;
+}
+.nav__item a:hover {
+  text-decoration: underline;
+}
+.nav__item--selected {
+  font-weight: 700;
+}
+.nav__item {
+  font-family: 'Roboto Mono', sans-serif;
+  font-size: 1em;
+  font-weight: 400;
+  display: inline;
+}
 .header {
   background-color: #E0E0E0;
 }
