fixing the padding on the nav to fit on smaller screens

--- a/css/app.css
+++ b/css/app.css
@@ -43,7 +43,12 @@ p {
 .nav__item a {
   text-decoration: none;
   color: #030303;
-  padding: 1em 1em;
+  padding: 1em 0.6em;
+}
+@media screen and (min-width: 900px) {
+  .nav__item a {
+    padding: 1em 1em;
+  }
 }
 .nav__item:first-child a {
   padding-left: 0;
