--- a/css/app.css
+++ b/css/app.css
@@ -27,10 +27,20 @@ p {
 }
 .nav {
   background-color: #E0E0E0;
-  padding: 2em 2em 6em 0em;
+  padding: 2em 0em 6em 0em;
+}
+@media screen and (min-width: 900px) {
+  .nav {
+    padding: 2em 2em 4em 2em;
+  }
 }
 .nav--on-white-bg {
   background-color: #ffffff;
+}
+@media screen and (min-width: 900px) {
+  .nav--extra-height {
+    padding-bottom: 6em;
+  }
 }
 .nav__list {
   list-style: none;
@@ -110,7 +120,7 @@ p {
     background-color: #E0E0E0;
     vertical-align: top;
     padding-top: calc(5em);
-    margin-left: 40px;
+    margin-left: 2em;
   }
 }
 .intro__content {
