--- a/css/app.css
+++ b/css/app.css
@@ -27,7 +27,7 @@ p {
 }
 .nav {
   background-color: #E0E0E0;
-  padding: 2em 0em 6em 0em;
+  padding: 0.1em 0em 2em 0em;
 }
 @media screen and (min-width: 900px) {
   .nav {
@@ -37,10 +37,8 @@ p {
 .nav--on-white-bg {
   background-color: #ffffff;
 }
-@media screen and (min-width: 900px) {
-  .nav--extra-height {
-    padding-bottom: 6em;
-  }
+.nav--extra-height {
+  padding-bottom: 6em;
 }
 .nav__list {
   list-style: none;
@@ -167,10 +165,20 @@ p {
   background-color: #ffffff;
 }
 .section--first-in-section {
-  padding-top: 3em;
+  padding-top: calc(1.5em);
+}
+@media screen and (min-width: 900px) {
+  .section--first-in-section {
+    padding-top: 3em;
+  }
 }
 .section--last-in-section {
-  padding-bottom: 4em;
+  padding-bottom: calc(2em);
+}
+@media screen and (min-width: 900px) {
+  .section--last-in-section {
+    padding-bottom: 4em;
+  }
 }
 .sub-section__content {
   padding-top: 1em;
